[gd_scene format=3 uid="uid://c0foaxcy63lhp"]

[ext_resource type="Texture2D" uid="uid://dq1cqcsf3e20x" path="res://Resources/Textures/powerup_window.tres" id="1_aqtgl"]
[ext_resource type="LabelSettings" uid="uid://cs12pr3awe428" path="res://Resources/LabelSettings/GameUI_40.tres" id="2_kfxlk"]
[ext_resource type="Script" uid="uid://2wrxmbtjhxf2" path="res://Scenes/GameUI/PowerupButton.gd" id="2_str1e"]
[ext_resource type="FontFile" uid="uid://731h4jsfj350" path="res://Assets/Fonts/Kenney High.ttf" id="3_str1e"]
[ext_resource type="Texture2D" uid="uid://olcfm2kop1vb" path="res://Resources/Textures/upgrade_pickup_range.tres" id="4_ltrem"]

[sub_resource type="LabelSettings" id="LabelSettings_gf3q2"]
font = ExtResource("3_str1e")
font_size = 50

[node name="PowerupButton" type="TextureButton" unique_id=1717163791]
custom_minimum_size = Vector2(250, 350)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_aqtgl")
stretch_mode = 0
script = ExtResource("2_str1e")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1103567416]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -31.0
offset_right = 55.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="upgradeLabel" type="Label" parent="VBoxContainer" unique_id=2043208369]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Upgrade!"
label_settings = ExtResource("2_kfxlk")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="spaceLabel" type="Label" parent="VBoxContainer" unique_id=1574269583]
layout_mode = 2
text = "   "
label_settings = SubResource("LabelSettings_gf3q2")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer" unique_id=1134337033]
custom_minimum_size = Vector2(55, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_ltrem")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
